--- a/Webprogramming/과제/실습문제_3장_2.html
+++ b/Webprogramming/과제/실습문제_3장_2.html
@@ -24,7 +24,7 @@
         <figure>
             <img src="../media/Chrome.png" alt="Google Chrome" width="200" height="200" border="1">
             <figcaption>
-            그림 1-2 구글 Chorme
+            그림 1-2 구글 Chrome
             </figcaption>
     </figure>
 
