--- a/Webprogramming/과제/8장 과제/실습문제 10-2.html
+++ b/Webprogramming/과제/8장 과제/실습문제 10-2.html
@@ -2,12 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>DOM 객체 동적 삽입</title>
+    <script>
+        function addAnswer(obj, text) {
+            let newPtag = document.createElement("p");
+            newPtag.innerHTML = text;
+            obj.parentElement.appendChild(newPtag);
+
+            newPtag.addEventListener("click",
+                function () {
+                    let delPtag = this.parentElement;
+                    delPtag.removeChild(this);
+                });
+        }
+    </script>
 </head>
 <body>
-
+<h3>정답의 동적 삽입</h3>
+<hr>
+<div><p>Q. 거울아 거울아 세상에서 누가 제일 예쁘니?</p>
+    <button onclick="addAnswer(this, '백설공주')">정답보기</button>
+</div>
+<div><p>Q. 죽느냐 사느냐 어떤 것이 문제인가?</p>
+    <button onclick="addAnswer(this, '둘다')">정답보기</button>
+</div>
 </body>
 </html>
