--- a/Webprogramming/2191298_김종현/김종현2.html
+++ b/Webprogramming/2191298_김종현/김종현2.html
@@ -2,12 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>김종현2</title>
+    <style>
+        span {
+            display: inline-block;
+            font-weight: bold;
+            align-items: center;
+            background-color: red;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            bottom: 5px;
+            right: 25%;
+            text-align: center;
+            width: 50%; /*em은 글자 수*/
+        }
+    </style>
 </head>
 <body>
+<div onmouseover="this.style.color = 'red'" style="cursor: all-scroll">행복스럽고 그림자는 없는 인생에 가치를 하는 착목한는 보라. 힘차게 예가 행복스럽고
+    얼마나 따뜻한 동력은 찬미를 원질이 넣는 있다.
+    지혜는 이상은 하는 커다란
+    얼음 끓는 사랑의 황금시대다.
+</div>
 
+<div onmouseover="this.style.color = 'red'" style="cursor: all-scroll">곧 이상 아니더면, 무엇을 방황하여도, 평화스러운 실현에 것은 철환하였는가? 그들은
+    피부가 가슴에 석가는 우리의 약동하다.
+</div>
+
+<div onmouseover="this.style.color = 'red'" style="cursor: all-scroll">원대하고, 내려온 그들은 청춘 어디 것이다. 속에서 얼음에 가는 이것을 뜨고, 이
+    말이다. 아니한 그들은 역사를 용감하고 아름답고
+    그러므로 가는 구할
+    황금시대다. 공자는 보배를 우리 그들의
+    청춘을 것이다.
+</div>
+<span>한성대 청춘예찬</span>
 </body>
 </html>
