--- a/Webprogramming/2191298_김종현/김종현3.html
+++ b/Webprogramming/2191298_김종현/김종현3.html
@@ -5,9 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>김종현3</title>
+    <style>
+        div{
+
+            width: 100px;
+            height: 100px;
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-
+    <div id="rec"></div>
 </body>
 </html>
