--- a/Webprogramming/실습/Week9/9-1.html
+++ b/Webprogramming/실습/Week9/9-1.html
@@ -1,13 +1,74 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>키 이벤트 응용</title>
+    <style>
+        td {
+            width: 50px;
+            height: 50px;
+            border: 1px solid black;
+        }
+    </style>
+
+    <script>
+        let tds;
+        let index = 0;
+        let prevIndex = 0;
+        window.onload = function () {
+            tds = document.getElementsByTagName("td");
+            tds[0].style.backgroundColor = "black";
+        }
+        window.onkeydown = function (e) {
+            switch (e.key) {
+                case "ArrowRight":
+                    index++;
+                    break;
+                case "ArrowLeft":
+                    index--;
+                    break;
+                case "ArrowDown":
+                    index += 4;
+                    break;
+                case "ArrowUp":
+                    index -= 4;
+                    break;
+            }
+            tds[index].style.backgroundColor = "black";
+            tds[prevIndex].style.backgroundColor = "white";
+            prevIndex = index;
+        }
+    </script>
 </head>
 <body>
+<h3>화살표 키로 셀 위로 이동하기</h3>
+<hr>
+<table>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
 
+</table>
 </body>
 </html>
