--- a/Webprogramming/과제/9장 과제/OpenChallenge09.html
+++ b/Webprogramming/과제/9장 과제/OpenChallenge09.html
@@ -31,17 +31,17 @@
 
         function set() {
             createTable();
-            let index=0;
+            let index = 0;
             tds = document.getElementsByTagName("td");
             let img = document.createElement("img");
-            img.setAttribute("src", "../../media/BBB.png");
+            img.setAttribute("src", "./media/BBB.png");
             img.setAttribute("width", "40px");
             img.setAttribute("height", "35px");
             img.onclick = moveImg;
             moveImg();
             changeImg();
             Life();
-            if(onclick(tds[index])!==tds[s]){
+            if (onclick(tds[index]) !== tds[s]) {
                 wrongClick();
             }
 
@@ -52,14 +52,14 @@
             }
 
             function wrongClick() {
-                document.removeChild(tds[s]);
-                tds[s].appendChild(img);
-                img.setAttribute("src", "../../media/boom.png");
+                let Img = document.getElementsByTagName("img");
+                Img.src = "./media/boom.png"
+                img.setAttribute("src", "./media/boom.png");
             }
 
             function changeImg() {
                 let img1 = document.getElementsByTagName("img");
-                img1.src = "../../media/boom.png"
+                img1.src = "./media/boom.png"
             }
 
         }
@@ -71,7 +71,7 @@
             for (let i = 0; i < 3; i++) {
 
                 let lifeImg = document.createElement("img");
-                lifeImg.setAttribute("src", "../../media/life.png");
+                lifeImg.setAttribute("src", "./media/life.png");
                 lifeImg.setAttribute("width", "40px");
                 lifeImg.setAttribute("height", "40px");
                 lifeImg.setAttribute("align", "center");
