--- a/Webprogramming/과제/12장 과제/12장_실습문제2_실행용.html
+++ b/Webprogramming/과제/12장 과제/12장_실습문제2_실행용.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<iframe src="./12장%20실습문제2_store.html" width="500" height="500"></iframe>
-<iframe src="./12장%20실습문제2_retrieve.html" width="500" height="500"></iframe>
+<iframe src="./12장_실습문제2_store.html" width="500" height="500"></iframe>
+<iframe src="./12장_실습문제2_retrieve.html" width="500" height="500"></iframe>
 
 </body>
 </html>
