--- a/Webprogramming/과제/12장 과제/12장_실습문제2_retrieve.html
+++ b/Webprogramming/과제/12장 과제/12장_실습문제2_retrieve.html
@@ -9,19 +9,22 @@
 <hr>
 품목명 : <input id="item" type="text">
 개수 : <input id="count" type="text"><br>
-<button id="save" onclick="store()" type="button">저장</button>
+<button id="retrieve" onclick="retrieve()" type="button">검색</button>
 <script>
     let item = document.getElementById("item");
     let count = document.getElementById("count");
 
-    function store() { // e는 이벤트 객체
+    function retrieve() { // e는 이벤트 객체
         if (!window.sessionStorage) {
             alert("세션 스토리지를 지원하지 않습니다.");
             return;
         }
-        sessionStorage.setItem(item.value, count.value);
+        let val = sessionStorage.getItem(item.value);
+        if (val == null)
+            alert(item.value + "는 구입 리스트에 없습니다.");
+        else
+            count.value = val;
     }
-
 </script>
 </body>
 </html>
