final exam end and java mini-project

--- a/Webprogramming/실습/Week10/10-1.html
+++ b/Webprogramming/실습/Week10/10-1.html
@@ -21,9 +21,9 @@
         context.fill();
         context.closePath();
     }
-    context.moveTo(200, 300);
-    context.lineTo(50, 60);
-    context.lineTo(10, 20);
+    context.moveTo(50, 50);
+    context.lineTo(50,50);
+    context.lineTo(60, 60);
     context.closePath();
     context.stroke();
 </script>
